fix sizing and alignment

--- a/blocks/v2-columns/v2-columns.css
+++ b/blocks/v2-columns/v2-columns.css
@@ -2,6 +2,12 @@
   overflow: hidden;
 }
 
+/* TODO: refactor generic section/block paddings */
+.v2-columns-container.padding-0 > div {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .v2-columns-container.section--with-background {
   position: relative;
 }
@@ -92,7 +98,6 @@
 }
 
 .v2-columns__column--with-text a.button {
-  min-width: auto;
   margin: 0;
 }
 
